bug 268578: misc bugfixes for MWE needed by the XSD Adapter https://bugs.eclipse.org/bugs/show_bug.cgi?id=268578